--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/sobe_swap_logo_BBL_icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="keywords"
-      content="Serum, SRM, Serum DEX, DEFI, Decentralized Finance, Decentralised Finance, Crypto, ERC20, Ethereum, Decentralize, Solana, SOL, SPL, Cross-Chain, Trading, Fastest, Fast, SerumBTC, SerumUSD, SRM Tokens, SPL Tokens"
+      content="SoBeSwap, Serum, SRM, Serum DEX, DEFI, Decentralized Finance, Decentralised Finance, Crypto, ERC20, Ethereum, Decentralize, Solana, SOL, SPL, Cross-Chain, Trading, Fastest, Fast, SerumBTC, SerumUSD, SRM Tokens, SPL Tokens"
     />
     <meta
       name="description"
-      content="Serum - The world's first completely decentralized derivatives exchange with trustless cross-chain trading"
+      content="SoBeSwap - A decentralized exchange and automated market-making protocol on the Solana network that manifests the SoBe Swap Development Team’s core values of transparency, efficiency, accessibility, sustainability, innovation and community development."
     />
     <link
       rel="apple-touch-icon"
@@ -33,10 +33,10 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:title" content="Serum DEX" />
+    <meta name="twitter:title" content="SoBeSwap" />
     <meta
       name="twitter:description"
-      content="Serum DEX - The world's first completely decentralized derivatives exchange with trustless cross-chain trading"
+      content="SoBeSwap - A decentralized exchange and automated market-making protocol on the Solana network that manifests the SoBe Swap Development Team’s core values of transparency, efficiency, accessibility, sustainability, innovation and community development."
     />
     <meta name="twitter:image" content="https://i.imgur.com/YS5Csfy.png" />
     
@@ -60,7 +60,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
 
-    <title>Serum</title>
+    <title>SoBeSwap</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
